<resources>
    <string name="app_name">MonBilletDeTrain!</string>
    <string name="btn_list_journey">Show your further journeys</string>
    <string name="btn_add_journey">Add a journey</string>

    <string name="menu_preferences">Preferences</string>
    <string name="menu_about">About</string>

    <string name="first_class">First class</string>
    <string name="second_class">Second class</string>

    <string name="pref_run_bg">Run in background</string>
    <string name="pref_run_bg_sum">Check to run automatically in background</string>
    <string name="pref_reduction_card">Reduction card</string>
    <string name="pref_reduction_card_sum">Select your reduction card</string>
    <string name="pref_update_freq">Update frequency</string>
    <string name="pref_update_freq_sum">Select period to check</string>
    <string name="pref_reduction_card_any">No reduction card</string>

    <string name="about_description">This application is a project done in my course Mobile Development, under the direction of Jean-François LALANDE at EFREI Paris.</string>
    <string name="about_copyright">All rights reserved - ©Paul-Henri ZIMMERLIN 2020</string>
    <string name="about_image_description">Logo of the school EFREI Paris</string>

    <string name="add_journey_title">Add a journey</string>
    <string name="add_journey_departure_label">Departure station</string>
    <string name="add_journey_arrival_label">Arrival station</string>
    <string name="add_journey_date_label">Date</string>
    <string name="add_journey_class_label">Class</string>
    <string name="add_journey_price_label">Limit price</string>
    <string name="add_journey_button">Add journey</string>
    <string name="add_journey_warning_departure">Departure station is required</string>
    <string name="add_journey_warning_arrival">Arrival station is required</string>
    <string name="add_journey_warning_limit">Limit price is required</string>
    <string name="add_journey_success_added">Journey successfully added</string>

    <string name="notification_your_ticket">Your ticket</string>
    <string name="notification_cost_only">cost only</string>
</resources>
